# simple-video-framework

./: CMakeLists.txt  README.md  pkgconfig.pc.cmake
cmake/: FindGLEW.cmake  FindSDL2.cmake
example/: CMakeLists.txt  simple_application.cpp
sources/: application.cpp  application.h  error.h  svf.h
